Multiple Save Prompts #64776

Closed
opened 2019-05-18 00:48:24 +02:00 by gobb_blend · 11 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64

Blender Version
Broken: version: 2.80 (sub 69), branch: master, commit date: 2019-05-17 18:03, hash: 3022dd2b27
Worked: (optional)

Short description of error
When you repeatedly attempt to close Blender with an unsaved .blend file, multiple copies of the save pop-up appear.
grafik.png
You can drag them accross the screen and it looks pretty broken.

Exact steps for others to reproduce the error
(see above)

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64 **Blender Version** Broken: version: 2.80 (sub 69), branch: master, commit date: 2019-05-17 18:03, hash: `3022dd2b27` Worked: (optional) **Short description of error** When you repeatedly attempt to close Blender with an unsaved .blend file, multiple copies of the save pop-up appear. ![grafik.png](https://archive.blender.org/developer/F7044410/grafik.png) You can drag them accross the screen and it looks pretty broken. **Exact steps for others to reproduce the error** (see above)
Author

Added subscriber: @gobb_blend

Added subscriber: @gobb_blend

#64865 was marked as duplicate of this issue

#64865 was marked as duplicate of this issue

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

I cannot reproduce this. Please prove exact steps to reproduce the error.

I cannot reproduce this. Please prove *exact* steps to reproduce the error.
Author

1 - Open Blender with factory settings
2 - Click once in the viewport to close the splash screen
3 - Make any kind of change to the scene, like moving the default cube
4 - Click the X in the top right corner of the Blender window
Now, each time you click the X, a new save dialogue will appear on top of the existing one(s). You can drag it around with the left mouse button, then click the X again to create a new one, then drag that around and so on and so forth.

EDIT:
A situation like this has never come up before because normally pop-ups would just close if you clicked anywhere in Blender's UI. The X however is not part of Blender's UI, so clicking it just opens more and more pop-ups.

Basically all that needs to be done to fix this is to make sure that no save prompt will appear if there already is one.

1 - Open Blender with factory settings 2 - Click once in the viewport to close the splash screen 3 - Make any kind of change to the scene, like moving the default cube 4 - Click the X in the top right corner of the Blender window Now, each time you click the X, a new save dialogue will appear on top of the existing one(s). You can drag it around with the left mouse button, then click the X again to create a new one, then drag that around and so on and so forth. EDIT: A situation like this has never come up before because normally pop-ups would just close if you clicked anywhere in Blender's UI. The X however is not part of Blender's UI, so clicking it just opens more and more pop-ups. Basically all that needs to be done to fix this is to make sure that no save prompt will appear if there already is one.

Ok, that explains why. Hitting the window close button on Mac does not spawn this dialog, so the issue is only on Linux & Windows.

Ok, that explains why. Hitting the window close button on Mac does not spawn this dialog, so the issue is only on Linux & Windows.

Added subscriber: @brecht

Added subscriber: @brecht
Jacques Lucke was assigned by Brecht Van Lommel 2019-05-18 10:00:39 +02:00

We just need a test to not open a second dialog if there is already one open.

We just need a test to not open a second dialog if there is already one open.

Added subscriber: @tiles

Added subscriber: @tiles

This issue was referenced by 11d5a1baff

This issue was referenced by 11d5a1baff49dbc234cd691fa419c8b63a79da5e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64776
No description provided.