Fix T64776: Multiple close file dialogs